Refactor: sessionRecordings 리팩토링